[simpleinterface] topbar menu reimplemented and created only dinamically now. Style fixes for content to have properly offest relative to topbar. Topmenu style fix to not overlap items

--- a/assets/css/simple/style.css
+++ b/assets/css/simple/style.css
@@ -117,9 +117,9 @@
       height : 70px !important;
   }
    */
-  .top-bar-offset{
-      margin-top : 70px !important;
-  }
+  /*.top-bar-offset{
+     /* margin-top : 70px !important;
+  }*/
   
   .top-bar-shower-off{
       display : none;
